--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://catalogDb:27017",
+    "DatabaseName": "CatalogDb",
+    "CollectionName": "Products"
   }
 }
