--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -18,7 +18,14 @@ services:
   discountdb:
     image: postgres
 
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.gRPC/Dockerfile
+
 volumes:
   mongo_data:
   postgres_data:
+
 
